feat: fix infrastructure monitoring, logs, and configuration UI
Fix empty endpoint responses, improve JVM metrics extraction, add search/filtering to logs and config tabs, enhance infrastructure UI with metric cards and progress bars